# --Notepad

./: CMakeLists.txt  Pad.cpp  Pad.h  Text.cpp  Text.h  header.h  main.cpp
